--- a/src/main/webapp/resources/css/registration.css
+++ b/src/main/webapp/resources/css/registration.css
@@ -92,3 +92,14 @@
 .errors {
     color: #ff1e19;
 }
+.userImageWrapper {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+.userImage {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-radius: 100%;
+}
